--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
 <head>
 	<!-- This is a comment! Text here will be ignored by the browser. -->
 	<meta charset="UTF-8">
-	<title>My Portfolio</title>
+	<title>Mr miles 2026 crazy style portfolio</title>
 	<link href="myCSS.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <div class="container">
   <div class="header">
-  	<h1>ECS Portfolio</h1>
+  	<h1>Mr miles 2026 crazy style portfolio</h1>
   </div>
   <div class="nav">
-    <h3><a href="index.html">Home</a> | 2 | 3</h3>
+    <h3><a href="index.html">Home</a> | <a href="ecs/index.html">E</a> | <a href="marital arts/index.html">E</a></h3>marital arts
   </div>
   <div class="content">Hello World!</div>
   <div class="footer">
-    <h4>About Me | Contact | Copyright 2021</h4>
+    <h4>About Me | Contact | Copyright 2026</h4>
   </div>
 </div>
 </body>
