--- a/ecs/index.html
+++ b/ecs/index.html
@@ -12,7 +12,7 @@
   	<h1>Mr miles 2026 crazy style portfolio</h1>
   </div>
   <div class="nav">
-    <h3><a href="index.html">Home</a> | <a href="ecs/index.html">E</a> | <a href="marital arts/index.html">E</a></h3>marital arts
+    <h3><a href="index.html">Home</a> | <a href="ecs/index.html">ECS</a> | <a href="marital arts/index.html">marital arts</a> </h3>
   </div>
   <div class="content">Hello World!</div>
   <div class="footer">
