--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   </div>
   <div class="content">
 	  <img src="images/welcome.png" alt="Welcome" width="960" >
+  </div>  
   <div class="footer">
     <h4>About Me | Contact | Copyright 2026</h4>
   </div>
