--- a/ecs/index.html
+++ b/ecs/index.html
@@ -3,13 +3,13 @@
 <head>
 	<!-- This is a comment! Text here will be ignored by the browser. -->
 	<meta charset="UTF-8">
-	<title>Mr miles 2026 crazy style portfolio</title>
+	<title>ECS Projects</title>
 	<link href="../myCSS.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <div class="container">
   <div class="header">
-  	<h1>Mr miles 2026 crazy style portfolio</h1>
+  	<h1>ECS Projects</h1>
   </div>
   <div class="nav">
     <h3><a href="index.html">Home</a> | <a href="ecs/index.html">ECS</a> | <a href="marital arts/index.html">marital arts</a> </h3>marital arts
