--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<!-- This is a comment! Text here will be ignored by the browser. -->
 	<meta charset="UTF-8">
 	<title>ECS Projects</title>
-	<link href="../myCSS.css" rel="stylesheet" type="text/css">
+	<link href="myCSS.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <div class="container">
@@ -12,10 +12,10 @@
   	<h1>ECS Projects</h1>
   </div>
   <div class="nav">
-    <h3><a href="../index.html">Home</a> | <a href="ecs/index.html">ECS</a> | <a href="../marital arts/index.html"></a> </h3>
+    <h3><a href="index.html">Home</a> | <a href="ecs/index.html">ECS</a> | <a href="maritalarts/index.html">Martial Arts</a> </h3>
   </div>
   <div class="content">
-	  <img src="images/welcome.png" alt="Welcome" width="960" >
+	  <img src="images/Welcome.png" alt="Welcome" width="960" >
   </div>  
   <div class="footer">
     <h4>About Me | Contact | Copyright 2026</h4>
