--- a/aboutme.html
+++ b/aboutme.html
@@ -1,1 +1,25 @@
-
+<!DOCTYPE html>
+<html class="homePage">
+<head>
+	<!-- This is a comment! Text here will be ignored by the browser. -->
+	<meta charset="UTF-8">
+	<title>About Crazy Style</title>
+	<link href="myCSS.css" rel="stylesheet" type="text/css">
+</head>
+<body>
+<div class="container">
+  <div class="header">
+  	<h1>About Crazy Syle</h1>
+  </div>
+  <div class="nav">
+    <h3> <a href="index.html">Home</a> | <a href="ecs/index.html">ECS</a> | <a href="maritalarts/index.html">Martial Arts</a> </h3>
+  </div>
+  <div class="content">
+	  <img src="images/welcome.png" alt="Welcome" width="960" >
+  </div>  
+  <div class="footer">
+    <h4> <a href=">aboutme.html>About Crazy Style</a> Contact | Copyright 2026</h4>
+  </div>
+</div>
+</body>
+</html>
