--- a/aboutme.html
+++ b/aboutme.html
@@ -15,10 +15,17 @@
     <h3> <a href="index.html">Home</a> | <a href="ecs/index.html">ECS</a> | <a href="maritalarts/index.html">Martial Arts</a> </h3>
   </div>
   <div class="content">
-	  <img src="images/welcome.png" alt="Welcome" width="960" >
-  </div>  
+	 <h3> Skills</h3>
+<ol>
+  <li>Drawing</li>
+  <li>Volleyball</li>
+  <li>Cooking</li>
+</ol>
+
+	  
+  </div>
   <div class="footer">
-    <h4> <a href=">aboutme.html>About Crazy Style</a> Contact | Copyright 2026</h4>
+    <h4> <a href=">aboutme.html>About Crazy Style</a> | Contact | Copyright 2026</h4>
   </div>
 </div>
 </body>
