--- a/index.html
+++ b/index.html
@@ -12,13 +12,12 @@
   	<h1>ECS Projects</h1>
   </div>
   <div class="nav">
-    <h3><a href="index.html">Home</a> | <a href="ecs/index.html">ECS</a> | <a href="maritalarts/index.html">Martial Arts</a> </h3>
+    <h3> <a href="index.html">Home</a> | <a href="ecs/index.html">ECS</a> | <a href="maritalarts/index.html">Martial Arts</a> </h3>
   </div>
   <div class="content">
-	  <img src="images/welcome.png" alt="Welcome" width="960" >
-  </div>  
+	  <img src="images/welcome.png" alt="Welcome" width="960" > </div>
   <div class="footer">
-    <h4>About Me | Contact | Copyright 2026</h4>
+    <h4> <a href="aboutme.html">About Crazy Syle</a> | Contact | Copyright 2026</h4>
   </div>
 </div>
 </body>
