--- a/ecs/index.html
+++ b/ecs/index.html
@@ -12,7 +12,7 @@
   	<h1>ECS Projects</h1>
   </div>
   <div class="nav">
-    <h3> <a href="../index.html">Home</a> | <a href="ecs/index.html">ECS</a> | <a href="../marital arts/index.html"></a> marital arts</a> </h3>marital arts
+    <h3> <a href="../index.html">Home</a> | <a href="ecs/index.html">ECS</a> | <a href="../marital arts/index.html"></a> marital arts</a> </h3>Martial Arts</a> </h3>
   </div>
   <div class="content">Hello World!</div>
   <div class="footer">
