--- a/ecs/index.html
+++ b/ecs/index.html
@@ -16,7 +16,7 @@
   </div>
   <div class="content">Hello World!</div>
   <div class="footer">
-    <h4>About Me | Contact | Copyright 2026</h4>
+    <h4>About Me |<a href+"mailto:9668395@graniteschools.org"> Contact | Copyright 2026</h4>
   </div>
 </div>
 </body>
