--- a/ecs/index.html
+++ b/ecs/index.html
@@ -14,7 +14,13 @@
   <div class="nav">
     <h3> <a href="../index.html">Home</a> | <a href="ecs/index.html">ECS</a> | <a href="../martial arts/index.html"></a> martial arts</a> </h3>Martial Arts</a> </h3>
   </div>
-  <div class="content">Hello World!</div>
+  <div class="content">
+<h3>Typing results</h3>
+
+<h3>ECS Projects</h3>
+
+<h3>Certifications</h3>
+  </div>
   <div class="footer">
     <h4>About Me |<a href+"mailto:9668395@graniteschools.org"> Contact | Copyright 2026</h4>
   </div>
