--- a/ecs/index.html
+++ b/ecs/index.html
@@ -22,7 +22,7 @@
 <h3>Certifications</h3>
   </div>
   <div class="footer">
-    <h4>About Me |<a href+"mailto:9668395@graniteschools.org"> Contact | Copyright 2026</h4>
+    <h4> <a href="../aboutme.html">About Me</a> | <a href="mailto:9668395@graniteschools.org"> Contact</a> | Copyright 2026</h4>
   </div>
 </div>
 </body>
